--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ build:
 test:
     stage: test
     before_script:
+        - apk add --no-cache py-pip
         - pip install pytest
     script:
         - pytest statistics_test.py
