--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,8 @@ build:
 test:
     stage: test
     before_script:
-        - apk add --no-cache py-pip
-        - pip install pytest
+        - apk add --no-cache py-pip3
+        - pip3 install pytest
     script:
         - pytest statistics_test.py
 # Выкат на сервер
