--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,8 @@ build:
 test:
     stage: test
     before_script:
-        - apk add python3 
-        - apk add --no-cache py-pip3
+        - apk add python3
+        - apk add --no-cache py3-pip
         - pip3 install pytest
     script:
         - pytest statistics_test.py
