--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ test:
     before_script:
         - apk add python3
         - apk add --no-cache py3-pip
-        - pip3 install pytest
+        - pip3 install -r python-requirments.txt
     script:
         - pytest statistics_test.py
 # Выкат на сервер
