--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,9 @@ test:
     script:
         - pytest statistics_test.py
         - pytest --cov=weather_statistics_app -vv --cov-config .coverage_config
+    artifacts:
+        paths:
+            - .coverage_config
 # Выкат на сервер
 deploy:
     stage: deploy
