--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ test:
         paths:
             - .coverage_config
             - coverage
+     coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
 # Выкат на сервер
 deploy:
     stage: deploy
