--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,22 +44,12 @@ test:
         - pytest --cov=weather_statistics_app statistics_test.py
     coverage: '/^(?i)(TOTAL).*\s+(\d+\%)$/'
 
-## Выкат на сервер
-#deploy:
-#    stage: deploy
-#    # выкатываем только ветку master
-#    only:
-#        - master
-#    # для этой ступени другие команды инициализации
-#    before_script:
-#        # устанавливаем зависимости Fabric, bash и rsync
-#        - apk add --no-cache openssh-client py-pip py-crypto bash rsync
-#        # устанавливаем Fabric
-#        - pip install fabric==1.12.0
-#        # добавляем приватный ключ для выката
-#        - eval $(ssh-agent -s)
-#        - bash -c 'ssh-add <(echo "$DEPLOY_KEY")'
-#        - mkdir -p ~/.ssh
-#        - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
-#    script:
-#        - fab -H $DEPLOY_ADDR deploy
+deploy:
+  stage: deploy
+  script:
+  - apt-get update -qy
+  - apt-get install -y ruby-dev
+  - gem install dpl
+  - dpl --provider=heroku --app=weather_statistics1 --api-key=$HEROKU_STAGING_API_KEY
+  only:
+  - master
