--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,8 @@ test:
 deploy:
   stage: deploy
   script:
-  - apt-get update -qy
-  - apt-get install -y ruby-dev
+  - apk add qy
+  - apk add ruby-dev
   - gem install dpl
   - dpl --provider=heroku --app=weather_statistics1 --api-key=$HEROKU_STAGING_API_KEY
   only:
