--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,10 @@ test:
 deploy:
   stage: deploy
   script:
-  - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
-  - git push heroku master
-  - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
+    - apk add git
+    - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
+    - git push heroku master
+    - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
   environment:
     name: staging
     url: https://weather-statistics1.herokuapp.com/
