--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ deploy:
   script:
     - apk add git
     - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
-    - git push heroku HEAD:master
+    - git push heroku HEAD:refs/heads/master
     - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
   environment:
     name: staging
