--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '2'
 services:
   weather_statistics:
     build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver '0.0.0.0:8000'
     ports:
       - '8000:8000'
