--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ test:
     before_script:
         - apk add python3
         - apk add --no-cache py3-pip
+        - apt-get -y install python3-psycopg2
         - pip3 install -r requirements.txt
     script:
         - pytest statistics_test.py
