--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,8 @@ test:
     before_script:
         - apk add python3
         - apk add --no-cache py3-pip
-        - apt-get -y install python3-psycopg2
+        - apk update && apk add postgresql-dev gcc python3-dev musl-dev
+        - pip3 install psycopg2-binary
         - pip3 install -r requirements.txt
     script:
         - pytest statistics_test.py
