--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,9 +52,8 @@ deploy:
     - apk add git
     - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
     - git add .
-    - - git config --global user.email "$email"
-      - git config --global user.name "$name"
-    - git commit -am "deploy"
+    - git config --global user.email "$email"
+    - git config --global user.name "$name"
     - git push heroku origin master
     - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
   environment:
