--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,9 +51,11 @@ deploy:
   script:
     - apk add git
     - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
+    - git init
     - git add .
     - git config --global user.email "$email"
     - git config --global user.name "$name"
+    - git commit -m "deploy"
     - git push heroku origin master
     - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
   environment:
