--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ before_script:
     - apt-get -y install python3-pip
     # установка docker-compose
     - pip3 install docker-compose==1.9.0
+    - apt install docker-ce
     # логин в Gitlab Docker registry
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - apt-get -y install python3-psycopg2
