--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,12 +18,17 @@ stages:
 before_script:
     # установка pip
     - apt-get update
+    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
+    - apt install apt-transport-https ca-certificates curl software-properties-common
+    - url -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+    - apt update && apt-cache policy docker-ce
+    - apt install -y docker-ce
+    # логин в Gitlab Docker registry
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - apt-get -y install python3-pip
     # установка docker-compose
     - pip3 install docker-compose==1.9.0
-    - apt-get install docker-ce docker-ce-cli containerd.io
-    # логин в Gitlab Docker registry
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - apt-get -y install python3-psycopg2
     - pip3 install -r requirements.txt
 
