--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,8 +68,9 @@ deploy:
     - add-apt-repository "deb https://cli-assets.heroku.com/branches/stable/apt ./"
     - curl -L https://cli-assets.heroku.com/apt/release.key | sudo apt-key add -
     - apt-get install -y heroku
-    - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
     - heroku login
+    - heroku git:remote -a weather-statistics1
+#    - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
     - git push heroku HEAD:master
     - echo "Deployed to Staging Server https://weather-statistics1.herokuapp.com"
   environment:
