--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,10 @@ before_script:
 #    - pip3 install docker-compose==1.9.0
 #    # логин в Gitlab Docker registry
 #    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - apt-get -y install python3-pip
-    - apt-get -y install python3-psycopg2
-    - pip3 install -r requirements.txt
+
+#    - apt-get -y install python3-pip
+#    - apt-get -y install python3-psycopg2
+#    - pip3 install -r requirements.txt
 
 ## Сборка Docker-образа
 #build:
@@ -65,6 +66,7 @@ deploy:
 #    - git config --global user.email "$email"
 #    - git config --global user.name "$name"
 #    - git commit -m "deploy"
+    - apt install snapd
     - snap install heroku --classic
     - heroku login
     - heroku git:remote -a weather-statistics1
