--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ deploy:
 #    - git config --global user.name "$name"
 #    - git commit -m "deploy"
     - apt install -y snapd
-    - snap install -y heroku --classic
+    - snap install heroku --classic
     - heroku login
     - heroku git:remote -a weather-statistics1
 #    - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
