--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,7 @@ deploy:
 #    - git config --global user.name "$name"
 #    - git commit -m "deploy"
     - apt install -y snapd
+    - service snapd start
     - snap install heroku --classic
     - heroku login
     - heroku git:remote -a weather-statistics1
