--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,8 +66,7 @@ deploy:
 #    - git config --global user.email "$email"
 #    - git config --global user.name "$name"
 #    - git commit -m "deploy"
-    - apt install -y snapd
-    - service snapd start
+    - sudo apt install -y snapd
     - snap install heroku --classic
     - heroku login
     - heroku git:remote -a weather-statistics1
