--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,9 @@ deploy:
 #    - git commit -m "deploy"
     - apt install -y curl
     - curl https://cli-assets.heroku.com/install.sh | sh
-    - heroku login
+    - heroku login -i
+    - tanya_postcrossing@mail.ru
+    - Tc9z5y543254325
     - heroku git:remote -a weather-statistics1
 #    - git remote add heroku https://heroku:$HEROKU_STAGING_API_KEY@git.heroku.com/weather-statistics1.git
     - git push heroku HEAD:master
