--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ deploy:
 #    - git commit -m "deploy"
     - apt install -y curl
     - curl https://cli-assets.heroku.com/install.sh | sh
-    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | ./heroku login -i
+    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | heroku login -i
 #    - heroku login -i
 #    - tanya_postcrossing@mail.ru
 #    - Tc9z5y543254325
