--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,11 +69,11 @@ deploy:
     - apt install -y curl
     - curl https://cli-assets.heroku.com/install.sh | sh
 #    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | heroku login -i
-    - command<<'EOF'
-    - heroku login -i
-    - [tanya_postcrossing@mail.ru]
-    - [Tc9z5y543254325]
-    - EOF
+#    - command<<'EOF'
+#    - heroku login -i
+#    - [tanya_postcrossing@mail.ru]
+#    - [Tc9z5y543254325]
+#    - EOF
 #    - heroku login -i
 #    - tanya_postcrossing@mail.ru
 #    - Tc9z5y543254325
