--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,17 @@ deploy:
     - apt install -y curl
     - curl https://cli-assets.heroku.com/install.sh | sh
 #    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | heroku login -i
+    - |
+      cat >~/.netrc <<EOF
+      machine api.heroku.com
+        login tanya_postcrossing@mail.ru
+        password 0108ff9e-62f8-4286-9ebf-8f7c04c241f4
+      machine git.heroku.com
+        login tanya_postcrossing@mail.ru
+        password 0108ff9e-62f8-4286-9ebf-8f7c04c241f4
+      EOF
+      - chmod 600 ~/.netrc
+      - heroku git:remote --app weather-statistics1
 #    - command<<'EOF'
 #    - heroku login -i
 #    - [tanya_postcrossing@mail.ru]
