--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,12 +60,12 @@ deploy:
   stage: deploy
   script:
     - apt install -y git
-#    - touch file
-#    - git init
-#    - git add .
-#    - git config --global user.email "$email"
-#    - git config --global user.name "$name"
-#    - git commit -m "deploy"
+    - touch file
+    - git init
+    - git add .
+    - git config --global user.email "$email"
+    - git config --global user.name "$name"
+    - git commit -m "deploy"
 #    - apt install -y curl
 #    - curl https://cli-assets.heroku.com/install.sh | sh
 #    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | heroku login -i
