--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,19 +66,18 @@ deploy:
     - git config --global user.email "$email"
     - git config --global user.name "$name"
     - git commit -m "deploy"
-#    - apt install -y curl
-#    - curl https://cli-assets.heroku.com/install.sh | sh
-#    - echo "tanya_postcrossing@mail.ru Tc9z5y543254325" | heroku login -i
-#    - cat >~/.netrc <<EOF
-#    - machine api.heroku.com
-#    - login tanya_postcrossing@mail.ru
-#    - password d4d5e873-685c-4b6a-ba9a-1a3a973358f1
-#    - machine git.heroku.com
-#    - login tanya_postcrossing@mail.ru
-#    - password d4d5e873-685c-4b6a-ba9a-1a3a973358f1
-#    - EOF
-#    - chmod 600 ~/.netrc
-#      - heroku git:remote --app weather-statistics1
+    - apt install -y curl
+    - curl https://cli-assets.heroku.com/install.sh | sh
+    - cat >~/.netrc <<EOF
+    - machine api.heroku.com
+    - login tanya_postcrossing@mail.ru
+    - password $HEROKU_PRODUCTION_API_KEY
+    - machine git.heroku.com
+    - login tanya_postcrossing@mail.ru
+    - password $HEROKU_PRODUCTION_API_KEY
+    - EOF
+    - chmod 600 ~/.netrc
+    - heroku git:remote --app weather-statistics1
 #    - command<<'EOF'
 #    - heroku login -i
 #    - [tanya_postcrossing@mail.ru]
