--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,19 +2,11 @@ image: ubuntu:18.04
 services:
     - docker:dind
 
-# Описываем, из каких ступеней будет состоять наша непрерывная интеграция:
-#  - сборка Docker-образа,
-#  - прогон тестов Django,
-#  - выкат на боевой сервер.
 stages:
     - build
     - test
     - deploy
 
-# Описываем инициализационные команды, которые необходимо запускать
-#  перед запуском каждой ступени.
-# Изменения, внесённые на каждой ступени, не переносятся на другие, так как запуск
-#  ступеней осуществляется в чистом Docker-контейнере, который пересоздаётся каждый раз.
 before_script:
     # установка pip
     - apt-get update
@@ -24,37 +16,36 @@ before_script:
 #    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
 #    - apt update && apt-cache policy docker-ce
 #    - apt install -y docker-ce
-#    # установка docker-compose
-#    - pip3 install docker-compose==1.9.0
-#    # логин в Gitlab Docker registry
+    # установка docker-compose
+    - pip3 install docker-compose==1.9.0
+    # логин в Gitlab Docker registry
 #    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - apt-get -y install python3-pip
+    - apt-get -y install python3-psycopg2
+    - pip3 install -r requirements.txt
 
-#    - apt-get -y install python3-pip
-#    - apt-get -y install python3-psycopg2
-#    - pip3 install -r requirements.txt
+# Сборка Docker-образа
+build:
+    stage: build
+    script:
+        # собственно сборка
+        - docker-compose build
+        # отправка собранного в registry
+        - docker-compose push
 
-## Сборка Docker-образа
-#build:
-#    stage: build
-#    script:
-#        # собственно сборка
-#        - docker-compose build
-#        # отправка собранного в registry
-#        - docker-compose push
-
-## Прогон тестов
-#test:
-#    stage: test
+# Прогон тестов
+test:
+    stage: test
 #    before_script:
 #        - apk add python3
 #        - apk add --no-cache py3-pip
 #        - apk update && apk add postgresql-dev gcc python3-dev musl-dev
 #        - pip3 install psycopg2-binary
 #        - pip3 install -r requirements.txt
-#    script:
-#        - pytest statistics_test.py
-#        - pytest --cov=weather_statistics_app statistics_test.py
-#    coverage: '/^(?i)(TOTAL).*\s+(\d+\%)$/'
+    script:
+        - pytest statistics_test.py
+        - pytest --cov=weather_statistics_app statistics_test.py
+    coverage: '/^(?i)(TOTAL).*\s+(\d+\%)$/'
 
 deploy:
   stage: deploy
