--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,16 +13,16 @@ before_script:
     - apt-get -y install python3-pip
     - apt-get -y install python3-psycopg2
     - pip3 install -r requirements.txt
-#    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
-#    - apt install apt-transport-https ca-certificates curl software-properties-common
-#    - url -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-#    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
-#    - apt update && apt-cache policy docker-ce
-#    - apt install -y docker-ce
+    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
+    - apt install apt-transport-https ca-certificates curl software-properties-common
+    - url -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+    - apt update && apt-cache policy docker-ce
+    - apt install -y docker-ce
     # установка docker-compose
     - pip3 install docker-compose==1.9.0
     # логин в Gitlab Docker registry
-#    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
 
 # Сборка Docker-образа
 build:
