--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,11 @@ before_script:
     - apt-get update
     - apt-get -y install python3-pip
     - apt-get -y install python3-psycopg2
+    - apt install -y curl
     - pip3 install -r requirements.txt
     - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
     - apt install apt-transport-https ca-certificates curl software-properties-common
-    - url -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
     - apt update && apt-cache policy docker-ce
     - apt install -y docker-ce
@@ -57,7 +58,6 @@ deploy:
     - git config --global user.email "$email"
     - git config --global user.name "$name"
     - git commit -m "deploy"
-    - apt install -y curl
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - gem install dpl
