--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 before_script:
     # установка pip
-    - apt-get update
+    - apt-get update && apt-get upgrade
     - apt-get -y install python3-pip
     - apt-get -y install python3-psycopg2
     - apt install -y curl
