--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,17 +9,19 @@ stages:
 
 before_script:
     # установка pip
-    - apt-get update && apt-get upgrade
+    - apt-get update
     - apt-get -y install python3-pip
     - apt-get -y install python3-psycopg2
     - apt install -y curl
     - pip3 install -r requirements.txt
-    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
-    - apt install apt-transport-https ca-certificates curl software-properties-common
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
-    - apt update && apt-cache policy docker-ce
-    - apt install -y docker-ce
+#    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
+#    - apt install apt-transport-https ca-certificates curl software-properties-common
+#    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+#    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+#    - apt update && apt-cache policy docker-ce
+#    - apt install -y docker-ce
+    - curl -fsSL https://get.docker.com -o get-docker.sh
+    - sh get-docker.sh
     # установка docker-compose
     - pip3 install docker-compose==1.9.0
     # логин в Gitlab Docker registry
