--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ before_script:
     - pip3 install docker-compose==1.9.0
     # логин в Gitlab Docker registry
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - usermod -aG docker ${$CI_BUILD_TOKEN}
     - export DOCKER_HOST=127.0.0.1:2375
 
 # Сборка Docker-образа
