--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ services:
     - docker:dind
 
 stages:
-    - build
+#    - build
     - test
     - deploy
 
@@ -20,23 +20,23 @@ before_script:
 #    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
 #    - apt update && apt-cache policy docker-ce
 #    - apt install -y docker-ce
-    - curl -fsSL https://get.docker.com -o get-docker.sh
-    - sh get-docker.sh
-    # установка docker-compose
-    - pip3 install docker-compose==1.9.0
-    # логин в Gitlab Docker registry
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - usermod -aG docker ${user}
-    - export DOCKER_HOST=127.0.0.1:2375
+#    - curl -fsSL https://get.docker.com -o get-docker.sh
+#    - sh get-docker.sh
+#    # установка docker-compose
+#    - pip3 install docker-compose==1.9.0
+#    # логин в Gitlab Docker registry
+#    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+#    - usermod -aG docker ${user}
+#    - export DOCKER_HOST=127.0.0.1:2375
 
-# Сборка Docker-образа
-build:
-    stage: build
-    script:
-        # собственно сборка
-        - docker-compose build
-        # отправка собранного в registry
-        - docker-compose push
+## Сборка Docker-образа
+#build:
+#    stage: build
+#    script:
+#        # собственно сборка
+#        - docker-compose build
+#        # отправка собранного в registry
+#        - docker-compose push
 
 # Прогон тестов
 test:
