--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,7 @@ stages:
 before_script:
     # установка pip
     - apt-get update
-    - apt-get -y install python3-pip
-    - apt-get -y install python3-psycopg2
     - apt install -y curl
-    - pip3 install -r requirements.txt
 #    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
 #    - apt install apt-transport-https ca-certificates curl software-properties-common
 #    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -41,12 +38,10 @@ before_script:
 # Прогон тестов
 test:
     stage: test
-#    before_script:
-#        - apk add python3
-#        - apk add --no-cache py3-pip
-#        - apk update && apk add postgresql-dev gcc python3-dev musl-dev
-#        - pip3 install psycopg2-binary
-#        - pip3 install -r requirements.txt
+    before_script:
+    - apt-get -y install python3-pip
+    - apt-get -y install python3-psycopg2
+    - pip3 install -r requirements.txt
     script:
         - pytest statistics_test.py
         - pytest --cov=weather_statistics_app statistics_test.py
