--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,12 @@ stages:
 before_script:
     - apt-get update
     - apt install -y curl
-    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
-    - apt install apt-transport-https ca-certificates curl software-properties-common
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
-    - apt update && apt-cache policy docker-ce
-    - apt install -y docker-ce
+#    - apt install linux-image-extra-$(uname -r) linux-image-extra-virtual
+#    - apt install apt-transport-https ca-certificates curl software-properties-common
+#    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+#    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+#    - apt update && apt-cache policy docker-ce
+#    - apt install -y docker-ce
     - curl -fsSL https://get.docker.com -o get-docker.sh
     - sh get-docker.sh
     # установка docker-compose
