--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,8 @@ before_script:
 #    - apt install -y docker-ce
     - curl -fsSL https://get.docker.com -o get-docker.sh
     - sh get-docker.sh
-    # установка docker-compose
-    - pip3 install docker-compose==1.9.0
+#    # установка docker-compose
+#    - pip3 install docker-compose==1.9.0
     # логин в Gitlab Docker registry
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
 
